<resources>
    <string name="app_name">Assignment345</string>
    <string name="meal_name">Meal Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="tip">Tip %</string>
    <string name="total_price">Total Price</string>
    <string name="meal_image">Meal Image</string>
    <string name="terms_and_cond">Terms and Cond.</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="order">Order</string>
    <string name="image">Image</string>
    <string name="space" />
</resources>
